--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <section id="about">
   <div id="about_left">
     <h2 class="section-title">Sobre Mim</h2>
-    <img src="#" alt="Foto de Bruna Maia" id="about_photo">
+    <img src="src/imagens/WhatsApp Image 2025-12-09 at 21.49.06.jpeg" alt="Foto de Bruna Maia" id="about_photo">
 
     <div id="about_text">
       <p>
