--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </div>
     
     <div id="banner">
-        <img src="#" alt="">
+        <img src="src/imagens/Banner.png" alt="">
     </div>
 
     <div class="scroll-indicator">
